syntax = "proto3";

service BroadcastService {
    rpc Broadcast(BroadcastMessage) returns (BroadcastEmpty);
    rpc Subscribe(BroadcastEmpty) returns (stream BroadcastMessage);
    rpc Unsubscribe(BroadcastEmpty) returns (BroadcastEmpty);
    rpc ReceiveBroadcast(BroadcastEmpty) returns (stream BroadcastMessage);
}

message BroadcastMessage {
    string text = 1;
    string auction_id=2;
    string owner_id=3;
    string address=4;
    string item_name = 5;
    double starting_price = 6;
    string bidder=7;
    string bidder_address=8;
}

message BroadcastEmpty {}
